# sensor-mappings-to-attack

./: .gitignore  CONTRIBUTING.md  README.md  SENSORMAPPING.xlsx  pyproject.toml
.github/workflows/: sphinx.yml
_templates/: layout.html
docs/: .index.rst.swp  .mapping_methodology.rst.swp  Acknowledgements.rst  Changelog  Example-Technique-Mappings.rst  Future-Work.rst  changelog.rst  conf.py  definitions.rst  example_technique_mappings.rst  future_work.rst  index.rst  mapping-Auditd.rst  mapping-CloudTrail.rst  mapping-OSQuery.rst  mapping-Sysmon.rst  mapping-WinEvtx.rst  mapping-Zeek.rst  mapping.rst  mapping_methodology.rst  overview.rst  use_cases.rst
docs/_static/: ctid_logo_white.xcf  readme.md
docs/_static/css/: ctid.css  smap.css
docs/_templates/: header.html
docs/example_technique_mappings/: CloudTrail.rst  Linux.rst  Network.rst  Windows.rst  cloudtrail.rst  index.rst  linux.rst  network.rst  windows.rst
docs/levels/: index.rst  mapping-Auditd.rst  mapping-CloudTrail.rst  mapping-OSQuery.rst  mapping-Zeek.rst  mapping_auditd.rst  mapping_cloudtrail.rst  mapping_osquery.rst  mapping_sysmon.rst  mapping_winevtx.rst  mapping_zeek.rst
docs/methodology/: index.rst  step1.rst  step2.rst  step3.rst
make/: sphinx.mk
mappings/: README.md
mappings/input/: config.json  enterprise-attack-v13.1-datacomponents.csv  enterprise-attack-v13.1-datasources.csv
mappings/layers/enterprise/: Auditd-heatmap.json  CloudTrail-heatmap.json  OSQuery-heatmap.json  Sysmon-heatmap.json  WinEvtx-heatmap.json  Zeek-heatmap.json  sensor-comparison-heatmap.json
mappings/stix/enterprise/: Auditd-mappings-enterprise.json  CloudTrail-mappings-enterprise.json  OSQuery-mappings-enterprise.json  Reference-for-mappings-enterprise.json  Sysmon-mappings-enterprise.json  WinEvtx-mappings-enterprise.json  Zeek-mappings-enterprise.json
src/: README.md
src/parse/: README.md  generate_stix.py  parse_mappings.py
src/util/: README.md  cli_validator.py  create_heatmap.py  create_heatmaps.py  create_mappings.py  generate_docs.py  stix_schemas.py
(+17 files in other folders)
